# Web-ChatGPT-API-Chrome-Addon

./: .gitignore  README.md
chrome-addon/: background.js  content.js  manifest.json  popup.html  popup.js
server/: main.py  pyproject.toml
tests/: test_image_generation.py
