[project]
name = "chatgpt-chrome-addon-server"
version = "0.1.0"
description = "Server for the ChatGPT Chrome Addon"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "pydantic>=2.10.6",
    "python-multipart>=0.0.20",
    "uvicorn[standard]",
    "websockets",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.basedpyright]
# Core behavior
typeCheckingMode = "standard"
pythonVersion = "3.12"

reportCallInDefaultInitializer = false
reportExplicitAny = false
